fixed scrollbar on viewport and dropdowns

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@ body {
   margin: 0;
   padding: 0;
   height:100%;
+  overflow:hidden;
+  display:flex;
+  flex-direction: column;
+  box-sizing:border-box;
   /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif; */
